ec2.tf
# resource "aws_instance" "myec2" {
#     ami = data.aws_ami.myami.id   # ami-08ebad9327c538ce4
#     instance_type  = "t2.micro"
  
# }
